web-search-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-search-service
  labels:
    app: web-search-service
spec:
  type: NodePort
  ports:
  - port: 3003
    targetPort: 3003
    protocol: TCP
    name: http
    nodePort: 30303
  selector:
    app: web-search-service
